--- a/templates/dac.html
+++ b/templates/dac.html
@@ -6,24 +6,24 @@
     <title>Student Lockers</title>
 </head>
 <body>
-    <h1>DAC-Student Lockers</h1>
+    <h1>DAC - Student Lockers Allocation List</h1>
     <table border="1">
         <tr>
-            <th>Sr. No</th>
-            <th>Roll No</th>
-            <th>Student Name</th>
+            <th>Sr.No.</th>
+            <th>RollNo</th>
+            <th>Name</th>
             <th>Group</th>
             <th>Gender</th>
-            <th>Locker Number</th>
+            <th>LockerNo</th>
         </tr>
         {% for student in locker_data %}
         <tr>
-            <td>{{ student['Sr. No'] }}</td>
-            <td>{{ student['Roll No'] }}</td>
-            <td>{{ student['Student Name'] }}</td>
+            <td>{{ student['Sr.No.'] }}</td>
+            <td>{{ student['RollNo'] }}</td>
+            <td>{{ student['Name'] }}</td>
             <td>{{ student['Group'] }}</td>
             <td>{{ student['Gender'] }}</td>
-            <td>{{ student['Locker Number'] }}</td>
+            <td>{{ student['LockerNo'] }}</td>
         </tr>
         {% endfor %}
     </table>
